消息提醒控件添加
消息提醒控件添加

--- a/BestarProject/ShoppingMall/build.gradle
+++ b/BestarProject/ShoppingMall/build.gradle
@@ -17,6 +17,11 @@ repositories {
     mavenLocal()
 }
 
+
+dependencies {
+    compile 'com.facebook.rebound:rebound:0.3.+'
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 def AAVersion = '3.0.1'
