--- a/BestarProject/ShoppingMall/build.gradle
+++ b/BestarProject/ShoppingMall/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     compile 'com.facebook.rebound:rebound:0.3.+'
+    compile files('libs/gson-1.7.1.jar')
 }
 
 apply plugin: 'com.android.application'
