--- a/BestarProject/ShoppingMall/AndroidManifest.xml
+++ b/BestarProject/ShoppingMall/AndroidManifest.xml
@@ -79,7 +79,7 @@
            android:launchMode="standard"
             android:screenOrientation="portrait"
             android:theme="@style/StartTheme"
-            android:windowSoftInputMode="stateAlwaysHidden" >
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" >
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
