--- a/BestarProject/ShoppingMall/AndroidManifest.xml
+++ b/BestarProject/ShoppingMall/AndroidManifest.xml
@@ -65,7 +65,7 @@
     <!-- 蓝牙录音检测耳机状态 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
-        android:name="com.manyi.mall.FybaoApplication_"
+        android:name=".BestarApplication_"
         android:configChanges="orientation|keyboardHidden"
         android:hardwareAccelerated="true"
         android:icon="@drawable/launcher_icon"
