--- a/BestarProject/ShoppingMall/build.gradle
+++ b/BestarProject/ShoppingMall/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
 apt {
     arguments {
-        androidManifestFile variant.processResources.manifestFile
+        androidManifestFile variant.outputs[0].processResources.manifestFile
         resourcePackageName 'com.manyi.mall'
     }
 }
