--- a/BestarProject/Widget/build.gradle
+++ b/BestarProject/Widget/build.gradle
@@ -7,9 +7,9 @@ buildscript {
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:1.0.0'
         // Since Android's Gradle plugin 0.11, you have to use android-apt >= 1.3
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4+'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
@@ -27,7 +27,7 @@ dependencies {
 }
 apt {
     arguments {
-        androidManifestFile variant.processResources.manifestFile
+        androidManifestFile variant.outputs[0].processResources.manifestFile
         resourcePackageName 'com.huoqiu.widget'
 
         // If you're using Android NBS flavors you should use the following line instead of hard-coded packageName
