--- a/BestarProject/ShoppingMall/build.gradle
+++ b/BestarProject/ShoppingMall/build.gradle
@@ -22,6 +22,8 @@ repositories {
 dependencies {
     compile 'com.facebook.rebound:rebound:0.3.7'
     compile files('libs/gson-1.7.1.jar')
+    compile files('libs/pushservice-4.4.0.71.jar')
+    compile files('libs/Baidu-Frontia-Android-2.0.8.jar')
 }
 
 apply plugin: 'com.android.application'
