--- a/BestarProject/ShoppingMall/src/main/AndroidManifest.xml
+++ b/BestarProject/ShoppingMall/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
     <!-- 蓝牙录音检测耳机状态 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
-        android:name="com.manyi.mall.MallApplication_"
+        android:name="com.manyi.mall.BestarApplication_"
         android:configChanges="orientation|keyboardHidden"
         android:hardwareAccelerated="true"
         android:icon="@drawable/launcher_icon"
@@ -113,31 +113,6 @@
                 <action android:name="com.manyi.fybao.push.NotificationService" />
             </intent-filter>
         </service>
-
-        <!-- 百度定位服务的Service 和KEY -->
-        <service
-            android:name="com.baidu.location.f"
-            android:enabled="true"
-            android:process=":remote" >
-            <intent-filter>
-                <action android:name="com.baidu.android.speech.demo.location.service" />
-            </intent-filter>
-        </service>
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="8Vei3f591Ni3dlYPgZahEW2e" />
-        <meta-data
-            android:name="com.baidu.lbsapi.SECRET_KEY"
-            android:value="9Y6gjeKof2hOBP9oui8qy3uStI2DKS1e" />
-        <!-- 友盟配置 start -->
-        <meta-data
-            android:name="UMENG_APPKEY"
-            android:value="5357541056240be701012bd3" />
-        <meta-data
-            android:name="UMENG_CHANNEL"
-            android:value="huoqiu" />
-        <!-- end -->
-
         <!-- push应用定义消息receiver声明 -->
         <receiver android:name="com.manyi.mall.push.MyPushMessageReceiver">
             <intent-filter>
