--- a/BestarProject/ShoppingMall/src/main/AndroidManifest.xml
+++ b/BestarProject/ShoppingMall/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
     <!-- 蓝牙录音检测耳机状态 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
-        android:name="com.manyi.mall.BestarApplication_"
+        android:name="com.manyi.mall.BestarApplication"
         android:configChanges="orientation|keyboardHidden"
         android:hardwareAccelerated="true"
         android:icon="@drawable/launcher_icon"
@@ -80,7 +80,7 @@
             android:name="com.manyi.mall.StartActivity_"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
             android:label="@string/app_name"
-           android:launchMode="standard"
+            android:launchMode="standard"
             android:screenOrientation="portrait"
             android:theme="@style/StartTheme"
             android:windowSoftInputMode="adjustResize|stateHidden" >
@@ -90,7 +90,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.manyi.mall.MainActivity_"
             android:configChanges="orientation|keyboardHidden|screenSize|keyboard"
@@ -150,14 +149,14 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
-        <!--<service-->
-            <!--android:name="com.baidu.android.pushservice.PushService"-->
-            <!--android:exported="true"-->
-            <!--android:process=":bdservice_v1" >-->
-            <!--<intent-filter >-->
-                <!--<action android:name="com.baidu.android.pushservice.action.PUSH_SERVICE"/>-->
-            <!--</intent-filter>-->
-        <!--</service>-->
+        <service
+            android:name="com.baidu.android.pushservice.PushService"
+            android:exported="true"
+            android:process=":bdservice_v1" >
+            <intent-filter >
+                <action android:name="com.baidu.android.pushservice.action.PUSH_SERVICE"/>
+            </intent-filter>
+        </service>
         <!-- 4.4版本新增的CommandService声明，提升小米和魅族手机上的实际推送到达率 -->
         <service
             android:name="com.baidu.android.pushservice.CommandService"
@@ -167,5 +166,4 @@
         <!-- 在百度开发者中心查询应用的API Key -->
         <meta-data android:name="api_key" android:value="Lovn2iu45r3RtTvOfk3WvYGk" />
     </application>
-
 </manifest>
